--- a/MyAppWeb/appsettings.json
+++ b/MyAppWeb/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-Q4OODA6\\SQLEXPRESS;Database=MyAppWebDB;Trusted_Connection=True;MultipleActiveResultSets=True"
+    "DefaultConnection": "Server=DESKTOP-Q4OODA6\\SQLEXPRESS;Database=MyAppWebDB;Trusted_Connection=True;MultipleActiveResultSets=True;encrypt=false"
   }
 }
